--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,52 @@
 <resources>
     <string name="app_name">Samad Nursing Home</string>
+    
+    <!-- Navigation Drawer -->
+    <string name="OpenDrawer">Open Navigation Drawer</string>
+    <string name="CloseDrawer">Close Navigation Drawer</string>
+    
+    <!-- Login Screen -->
+    <string name="welcome_back">Welcome Back</string>
+    <string name="login_subtitle">Sign in to access your healthcare dashboard</string>
+    <string name="email_hint">Email Address</string>
+    <string name="password_hint">Password</string>
+    <string name="login_button">Sign In</string>
+    <string name="forgot_password">Forgot Password?</string>
+    <string name="create_account">Create New Account</string>
+    
+    <!-- Validation Messages -->
+    <string name="error_empty_email">Please enter your email address</string>
+    <string name="error_invalid_email">Please enter a valid email address</string>
+    <string name="error_empty_password">Please enter your password</string>
+    <string name="error_short_password">Password must be at least 6 characters</string>
+    <string name="error_login_failed">Login failed. Please check your credentials.</string>
+    
+    <!-- Dashboard -->
+    <string name="dashboard_welcome">Welcome to Samad Nursing Home</string>
+    <string name="quick_actions">Quick Actions</string>
+    <string name="book_appointment">Book Appointment</string>
+    <string name="view_records">View Records</string>
+    <string name="emergency_contact">Emergency Contact</string>
+    <string name="doctor_schedule">Doctor Schedule</string>
+    
+    <!-- Navigation Menu -->
+    <string name="nav_home">Home</string>
+    <string name="nav_about_us">About Us</string>
+    <string name="nav_departments">Departments</string>
+    <string name="nav_doctors">Doctors</string>
+    <string name="nav_services">Our Services</string>
+    <string name="nav_appointment">Appointment</string>
+    <string name="nav_contact">Contact Us</string>
+    <string name="nav_rate_us">Rate Us</string>
+    <string name="nav_share_app">Share App</string>
+    <string name="nav_privacy_policy">Privacy Policy</string>
+    <string name="nav_logout">Logout</string>
+    
+    <!-- General -->
+    <string name="loading">Loading...</string>
+    <string name="retry">Retry</string>
+    <string name="cancel">Cancel</string>
+    <string name="save">Save</string>
+    <string name="edit">Edit</string>
+    <string name="delete">Delete</string>
 </resources>
