--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -21,6 +21,10 @@
     <string name="get_started">Get Started</string>
     <string name="need_emergency">Need Emergency Care?</string>
     <string name="emergency_number">+91 7860120688</string>
+    <string name="healthcare_services">24/7 Healthcare Services</string>
+    <string name="emergency_care_24_7">24/7 Emergency Care</string>
+    <string name="immediate_medical_assistance">Immediate medical assistance available</string>
+    <string name="schedule_with_doctors">Schedule with doctors</string>
     
     <!-- Quick Actions -->
     <string name="quick_actions">Quick Actions</string>
@@ -29,11 +33,23 @@
     <string name="online_consultation">Online Consultation</string>
     
     <!-- Services -->
-    <string name="healthcare_services">24/7 Healthcare Services</string>
+    <string name="our_services">Our Services</string>
     <string name="domestic_care">Domestic Care</string>
     <string name="call_now">Call Now</string>
     <string name="buy_treatment">Buy Treatment Dose at Half a</string>
     <string name="price_or_even_less">price or even less</string>
+    
+    <!-- Service Names and Descriptions -->
+    <string name="emergency_care">Emergency Care</string>
+    <string name="emergency_care_desc">24/7 emergency medical services</string>
+    <string name="cardiology">Cardiology</string>
+    <string name="cardiology_desc">Heart care and treatment</string>
+    <string name="pediatrics">Pediatrics</string>
+    <string name="pediatrics_desc">Child healthcare services</string>
+    <string name="laboratory">Laboratory</string>
+    <string name="laboratory_desc">Diagnostic tests and reports</string>
+    <string name="pharmacy">Pharmacy</string>
+    <string name="pharmacy_desc">Medicines and healthcare products</string>
     
     <!-- Doctors -->
     <string name="our_doctors">Our Doctors</string>
@@ -92,6 +108,50 @@
     <string name="nav_appointments">Appointments</string>
     <string name="nav_records">Records</string>
     <string name="nav_profile">Profile</string>
+    <string name="nav_chat">AI Chat</string>
+    <string name="nav_about_us">About Us</string>
+    <string name="nav_departments">Departments</string>
+    <string name="nav_doctors">Doctors</string>
+    <string name="nav_services">Services</string>
+    <string name="nav_appointment">Appointment</string>
+    <string name="nav_contact">Contact</string>
+    <string name="nav_rate_us">Rate Us</string>
+    <string name="nav_share_app">Share App</string>
+    <string name="nav_privacy_policy">Privacy Policy</string>
+    <string name="nav_logout">Logout</string>
+    
+    <!-- Permissions -->
+    <string name="permission_required">Permission Required</string>
+    <string name="call_permission_explanation">This app needs phone permission to make emergency calls directly. You can also use the dialer instead.</string>
+    <string name="grant_permission">Grant Permission</string>
+    <string name="call_permission_denied">Call permission denied. Using dialer instead.</string>
+    <string name="emergency_call">Emergency Call</string>
+    
+    <!-- Error Messages -->
+    <string name="no_maps_app">No maps application found</string>
+    <string name="whatsapp_not_installed">WhatsApp is not installed</string>
+    <string name="feature_coming_soon">Feature coming soon!</string>
+    <string name="error_empty_email">Email cannot be empty</string>
+    <string name="error_invalid_email">Please enter a valid email</string>
+    <string name="error_empty_password">Password cannot be empty</string>
+    <string name="error_short_password">Password must be at least 6 characters</string>
+    <string name="error_login_failed">Login failed. Please check your credentials.</string>
+    
+    <!-- Login -->
+    <string name="welcome_back">Welcome Back</string>
+    <string name="login_subtitle">Sign in to access your healthcare services</string>
+    <string name="email_hint">Email</string>
+    <string name="password_hint">Password</string>
+    <string name="login_button">LOGIN</string>
+    <string name="forgot_password">Forgot Password?</string>
+    <string name="create_account">Don\'t have an account? Sign Up</string>
+    
+    <!-- Chat -->
+    <string name="ai_assistant">AI Health Assistant</string>
+    <string name="type_message">Type your message...</string>
+    <string name="send">Send</string>
+    <string name="clear_chat">Clear Chat</string>
+    <string name="chat_cleared">Chat cleared</string>
     
     <!-- Common -->
     <string name="loading">Loading...</string>
@@ -101,4 +161,17 @@
     <string name="edit">Edit</string>
     <string name="delete">Delete</string>
     <string name="confirm">Confirm</string>
+    <string name="ok">OK</string>
+    <string name="yes">Yes</string>
+    <string name="no">No</string>
+    
+    <!-- Theme -->
+    <string name="light_theme">Light Theme</string>
+    <string name="dark_theme">Dark Theme</string>
+    <string name="system_theme">System Default</string>
+    
+    <!-- Language -->
+    <string name="language">Language</string>
+    <string name="english">English</string>
+    <string name="hindi">हिंदी</string>
 </resources>
